<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FMCW Radar Kit Mobile</string>
    <string name="menu_settings">Settings</string>
    <string name="title_main_activity">Applied Radar, Inc. FMCW Radar Kit</string>
    <string name="send_to">Send to</string>
    <string name="freq_settings">Frequency Shifter</string>
    <string name="bt_settings">Bluetooth Connections</string>
    <string name="device_search">Search for Devices</string>
    <string name="device_pair">Paired Devices</string>
    <string name="device_connect">Discovered Devices</string>
    <string name="collect_data">Collect</string>
    <string name="load_data">File Archive</string>
    <string name="save_data">Save</string>
    <string name="share_data">Share</string>
    <string name="plot_data">Plot Raw</string>
    <string name="plot_FFT">Plot Range</string>
    <string name="statistics_log">Statistics</string>
    <string name="collect_save">Collect/Save</string>
    <string name="get_parameters">Parameters</string>
    <string name="load_new">Load</string>

    <!-- Used on unexecutable layout-large & layout-normal XML files -->
    <string name="start">Start</string>
    <string name="stop">Stop</string>

    <!-- Device List Layout Strings -->
    <string name="title_activity_device_list_activty">Device List Activity</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_item_list">Items</string>
    <string name="hello_world">Hello empty screen! :D</string>

    <!-- Display Archive Layout Strings -->
    <string name="title_activity_display_archive">Data File Archive</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Hint: </string>
    <string name="title_file_list">Files</string>
    <string name="choose_file">Choose a file:</string>
    <string name="file_info">File Information:</string>
    <string name="button_open">Open File</string>
    <string name="button_delete">Delete File</string>

    <!-- Settings Layout Strings -->
    <string name="title_activity_settings">Settings</string>
    <string name="bluetoothToggle">Bluetooth</string>
    <string name="bluetoothSettings">Bluetooth Settings: </string>
    <string name="captureTime">Capture Time</string>
    <string name="currentSetting">Current Setting: </string>
    <string name="bandwidthSetting">Bandwidth</string>
    <string name="currentRampTime">Ramp Time</string>
    <string name="currentCaptureTime"></string>
    <string name="currentBandwidth"></string>
    <string name="changeCaptureTime">Change Capture Time</string>
    <string name="changeBandwidth">Change Bandwidth</string>
    <string name="changeRampTime">Change Ramp Time</string>
    <string name="seekbar_from_touch">from touch</string>
    <string name="ramp_time">Get Ramp Time</string>
    <string name="sweep_type">Get Sweep Type</string>
    <string name="start_freq">Get Start Frequency</string>
    <string name="stop_freq">Get Stop Frequency</string>
    <string name="ref_div">Get Ref. Div.</string>
    
    <string name="set_ramp_time">Set Ramp Time</string>
    <string name="set_sweep_type">Set Sweep Type</string>
    <string name="set_start_freq">Set Start Freq.</string>
    <string name="set_stop_freq">Set Stop Freq.</string>
    <string name="set_ref_div">Set Ref. Div.</string>
    
    
    <!-- Dialogs -->
	<string name="alert_dialog_ok">OK</string>
	<string name="alert_dialog_cancel">Cancel</string>
	<string name="alert_dialog_two_buttons_title"> user input :)</string>
	<string name="send2">Send</string>

</resources>