<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DisplayArchive" >

 <!--    <TextView android:id="@+id/title_file_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_file_list"
        android:visibility="gone"
        android:background="#666"
        android:textColor="#fff"
        android:paddingLeft="5dp" />
    

    
    <ListView android:id="@+id/files_archived"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stackFromBottom="true"
        android:layout_weight="1" /> 

	 -->
	
	
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_file"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:splitMotionEvents="true"
        android:baselineAligned="false" >
        
        <!-- File List -->
		<ListView android:id="@+id/list1"
				android:layout_width="0dip"
				android:layout_height="match_parent"
				android:layout_weight="1" />
	
		 <!-- Selected File Information "List" -->
		<LinearLayout android:id="@+id/list2"
			android:orientation="vertical"
			android:layout_width="0dip"
			android:layout_height="match_parent"
			android:layout_weight="1" >
	
            <TextView
                android:id="@+id/information"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/file_info"
                android:visibility="invisible"
                android:textAppearance="?android:attr/textAppearanceLarge" />
			
            <!-- General File Details -->
            <LinearLayout
                android:id="@+id/file_info"
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >
                
                 <!-- Information Titles -->
                <TextView
	                android:id="@+id/textView2"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_weight="1" 
	                android:textIsSelectable="true"
	                android:textAppearance="?android:attr/textAppearanceMedium" />
                
				<!-- Information List w/ respect to Information Titles -->
	            <TextView
	                android:id="@+id/textView3"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_weight="1" 
	                android:textIsSelectable="true"
	                android:textAppearance="?android:attr/textAppearanceMedium" />     
            </LinearLayout>
            
            <!-- General File Details -->
            <LinearLayout
                android:id="@+id/radar_params"
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >
                
                <!-- Radar Parameter Labels -->
                <TextView
	                android:id="@+id/paramLabels"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_weight="1" 
	                android:textIsSelectable="true"
	                android:textAppearance="?android:attr/textAppearanceMedium" />
                
				<!-- Radar Parameter Details -->
	            <TextView
	                android:id="@+id/paramDetails"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_weight="1" 
	                android:textIsSelectable="true"
	                android:textAppearance="?android:attr/textAppearanceMedium" />     
            </LinearLayout>
            
             <!-- Open File Button -->
            <Button
		        android:id="@+id/button_open"
		        android:layout_width="234dp"
		        android:layout_height="wrap_content"
		        android:onClick="openFile"
		        android:text="@string/button_open"
		        android:visibility="invisible" />
            
              <!-- Delete File Button -->
            <Button
		        android:id="@+id/button_delete"
		        android:layout_width="234dp"
		        android:layout_height="wrap_content"
		        android:onClick="deleteFile"
		        android:text="@string/button_delete"
		        android:visibility="invisible" />

		</LinearLayout>
	</LinearLayout>
    
</LinearLayout>